Add route delete account for admin, user , delete employee and get all role for admin role
