# src/controllers/auth/routes.ts
@@ -12,11 +12,7 @@ authRoutes.route('/resend-otp/confirm-email').post(Controller.resendOtpForConfir
 authRoutes.route('/sign-in').post(Controller.signIn);
 authRoutes.route('/forgot-password').post(Controller.forgotPassword);
 authRoutes.route('/reset-password').put(Controller.resetPassword);
-authRoutes
-    .route('/change-password')
-    .put(
-        Authorization,
-        CheckRole([Identify.Admin, Identify.Manager, Identify.Assistant, Identify.Employee]),
-        Controller.changePassword,
-    );
+authRoutes.route('/change-password').put(Authorization, Controller.changePassword);
 authRoutes.route('/get-access-token').post(Controller.getNewAccessToken);
+authRoutes.route('/delete-account').delete(Authorization, Controller.deleteAccount);
+authRoutes.route('/delete-account/:_id').delete(Authorization, CheckRole(Identify.Admin), Controller.deleteAccount);
